--- a/app/src/release/res/values/urls.xml
+++ b/app/src/release/res/values/urls.xml
@@ -29,4 +29,5 @@
     <string name="rcp_url">https://mainnet.infura.io</string>
     <string name="net_version">1</string>
     <string name="google_search_url">https://www.google.com/search?q=%1$s</string>
+    <string name="coinbase_buy_widget_url">https://buy.coinbase.com/widget?code=9a6fb1e3-af41-5677-9b67-8c8a0e365771&amp;address=%1$s</string>
 </resources>
